# haskell-csmt

./: .gitignore  404.html  README.md  cabal.project  csmt-utxo.cabal  csmt.cabal  flake.nix  hie.yaml  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: CI.yaml  deploy-docs.yaml
.llm/: issue-16-simplify-inclusion-proof.md
CI/: release.sh
CI/rewrite-libs/nix/: project.nix
architecture/example/: index.html
architecture/inclusion-proof/: index.html
architecture/storage/: index.html
architecture/system/: index.html
bench/: main.hs
concepts/: index.html
docs/: architecture.md  concepts.md  index.md  installation.md  library.md
docs/architecture/: encodings.md  example.md  inclusion-proof.md  storage.md  system.md
installation/: index.html
manual/: index.html
nix/: project.nix
search/: search_index.json
src/: App.hs  CSMT.hs  SMT.hs
src/CSMT/: Deletion.hs  Hashes.hs  Insertion.hs  Interface.hs  Proofs.hs
src/CSMT/Backend/: LMDB.hs  Pure.hs  RocksDB.hs
src/CSMT/Backend/RocksDB/: Key.hs
src/CSMT/Frontend/CLI/: App.hs
src/CSMT/Proof/: Completeness.hs  Insertion.hs
src/Data/Serialize/: Extra.hs
src/csmt/: CSMT.hs
src/csmt/CSMT/: Deletion.hs  Hashes.hs  Insertion.hs  Interface.hs
src/csmt/CSMT/Backend/: Pure.hs  RocksDB.hs  Standalone.hs
src/csmt/CSMT/Frontend/CLI/: App.hs  SpaceLeak.hs
src/csmt/CSMT/Proof/: Completeness.hs  Insertion.hs
src/kv-transactions/Database/KV/: Database.hs  Transaction.hs
src/rocksdb-transactions/Database/KV/: Cursor.hs  Database.hs  Transaction.hs
src/rocksdb-transactions/Database/KV/RocksDB/: Transaction.hs
test/: CSMTSpec.hs  SMTSpec.hs
test-lib/CSMT/Test/: Lib.hs
test/CSMT/: DeletionSpec.hs  HashesSpec.hs  InsertionSpec.hs  InterfaceSpec.hs  ProofsSpec.hs
test/CSMT/Backend/: RocksDBSpec.hs
test/CSMT/Backend/RocksDB/: KeySpec.hs  TransactionSpec.hs
test/CSMT/Proof/: CompletenessSpec.hs  InsertionSpec.hs
