cabal-version:   3.4
name:            csmt-utxo
version:         0.2.0.0
synopsis:        An http service exposing docker logs from remote hosts
license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  other-modules:    Paths_csmt_utxo
  exposed-modules:
    App
    CSMT
    CSMT.Backend.Pure
    CSMT.Backend.RocksDB.Key
    CSMT.Hashes
    CSMT.Insertion
    CSMT.Interface
    CSMT.Proofs

  build-depends:
    , base
    , bytestring
    , cereal
    , containers
    , crypton
    , memory
    , transformers

  -- , rocksdb-haskell-jprupp
  hs-source-dirs:   src
  default-language: Haskell2010

executable csmt-utxo
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          app/main.hs
  build-depends:
    , base
    , csmt-utxo

  default-language: Haskell2010

common unit-test-common
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , containers
    , csmt-utxo
    , hspec
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover

test-suite unit-test
  import:        unit-test-common
  type:          exitcode-stdio-1.0
  main-is:       main.hs
  other-modules:
    CSMT.Backend.RocksDB.KeySpec
    CSMTSpec

executable unit-tests-exe
  import:        unit-test-common
  ghc-options:   -O1 -threaded -rtsopts -with-rtsopts=-N
  main-is:       main-exe.hs
  other-modules:
    CSMT.Backend.RocksDB.KeySpec
    CSMTSpec
