cabal-version:   3.4
name:            csmt-utxo
version:         0.2.0.0
synopsis:
  An http service around a compact sparse merkle tree implementation for UTXO set management

description:     CSMT is a Haskell library implementing a Compact Sparse Mer
license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  other-modules:    Paths_csmt_utxo
  exposed-modules:
    App
    CSMT
    CSMT.Backend.Pure
    CSMT.Backend.RocksDB
    CSMT.Backend.RocksDB.Key
    CSMT.Deletion
    CSMT.Hashes
    CSMT.Insertion
    CSMT.Interface
    CSMT.Proofs

  build-depends:
    , base
    , bytestring
    , cereal
    , containers
    , crypton
    , haskeline
    , memory
    , rocksdb-haskell-jprupp
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010

executable csmt-utxo
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          app/main.hs
  build-depends:
    , base
    , csmt-utxo

  default-language: Haskell2010

library test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  CSMT.Test.Lib
  build-depends:
    , base
    , containers
    , csmt-utxo
    , QuickCheck

  hs-source-dirs:   test-lib
  default-language: Haskell2010

common unit-test-common
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , csmt-utxo
    , csmt-utxo:test-lib
    , filepath
    , hspec
    , memory
    , QuickCheck
    , temporary

  -- , pretty-simple
  build-tool-depends: hspec-discover:hspec-discover

test-suite unit-test
  import:        unit-test-common
  type:          exitcode-stdio-1.0
  main-is:       main.hs
  other-modules:
    CSMT.Backend.RocksDB.KeySpec
    CSMT.Backend.RocksDBSpec
    CSMT.DeletionSpec
    CSMT.HashesSpec
    CSMT.InsertionSpec
    CSMT.InterfaceSpec
    CSMT.ProofsSpec

executable unit-tests-exe
  import:        unit-test-common
  ghc-options:   -O1 -threaded -rtsopts -with-rtsopts=-N
  main-is:       main-exe.hs
  other-modules:
    CSMT.Backend.RocksDB.KeySpec
    CSMT.Backend.RocksDBSpec
    CSMT.DeletionSpec
    CSMT.HashesSpec
    CSMT.InsertionSpec
    CSMT.InterfaceSpec
    CSMT.ProofsSpec
