cabal-version:   3.4
name:            csmt
version:         0.3.0.0
synopsis:
  An http service around a compact sparse merkle tree implementation

description:
  CSMT is a Haskell library implementing a Compact Sparse Merkle Tree (CSMT)
  data structure with support for persistent storage backends.
  It provides efficient insertion, deletion, and proof generation functionalities.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  other-modules:    Paths_csmt
  exposed-modules:
    CSMT
    CSMT.Backend.Pure
    CSMT.Backend.RocksDB
    CSMT.Deletion
    CSMT.Frontend.CLI.App
    CSMT.Hashes
    CSMT.Insertion
    CSMT.Interface
    CSMT.Proofs
    Data.Serialize.Extra

  build-depends:
    , async
    , base
    , bytestring
    , cereal
    , containers
    , crypton
    , haskeline
    , memory
    , opt-env-conf
    , rocksdb-haskell-jprupp
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
  other-modules:    Paths_csmt

executable csmt
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          app/cli/main.hs
  build-depends:
    , base
    , csmt

  default-language: Haskell2010

library test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  CSMT.Test.Lib
  build-depends:
    , base
    , csmt
    , free
    , QuickCheck

  hs-source-dirs:   test-lib
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , cereal
    , containers
    , csmt
    , csmt:test-lib
    , filepath
    , hspec
    , QuickCheck
    , temporary

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    CSMT.Backend.RocksDBSpec
    CSMT.DeletionSpec
    CSMT.HashesSpec
    CSMT.InsertionSpec
    CSMT.InterfaceSpec
    CSMT.ProofsSpec

benchmark bench
  import:           warnings
  ghc-options:      -O2
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          main.hs
  build-depends:
    , base
    , bytestring
    , csmt
    , deepseq
    , filepath
    , miniterion
    , temporary
